--- a/antturi_01/index.html
+++ b/antturi_01/index.html
@@ -22,30 +22,16 @@
 
     <h4>What do you hope to learn in this class?</h4>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et accumsan ipsum. Nam finibus sapien at dolor
-        rhoncus, quis sagittis nunc tristique. Vivamus eget nisi sed ipsum malesuada placerat eget facilisis nulla.
-        Nulla et est at eros rhoncus molestie eget egestas dolor. Pellentesque a risus vel nibh dignissim porttitor non
-        eget mauris. Ut posuere, neque ac placerat sodales, felis augue pharetra turpis, sit amet facilisis neque nisi
-        sed urna. Morbi semper, massa ac vehicula tristique, eros libero tristique nisl, sed vulputate felis urna quis
-        tellus. Suspendisse potenti. Integer sagittis tincidunt est, sed imperdiet sapien convallis vitae. Proin a
-        convallis lacus. Praesent vitae risus varius purus tincidunt euismod eget sed justo. </p>
+    <p>In class, I hope to learn more about how I can present my media in an effective and interesting way through my own webpage.</p>
 
 
 
     <h4>Do you have experience with coding (html, css, javascript)?
     </h4>
-    <p> Morbi id commodo nisl, sed semper felis. Morbi turpis magna, venenatis eu aliquet at, mollis at ligula. Aliquam
-        libero lacus, euismod at lorem in, blandit rhoncus ipsum. Aliquam lobortis justo at sapien gravida, ac
-        vestibulum tellus mollis. Proin convallis dignissim consequat. Nunc rutrum ultrices tempor. Nam porttitor semper
-        leo vel fringilla. Cras eros metus, ullamcorper non turpis quis, auctor faucibus turpis. Nunc et orci ut metus
-        vehicula elementum vestibulum a erat. Maecenas aliquam dolor enim, ac tempor lorem egestas eu. Mauris sed odio
-        lacus.</p>
+    <p> I have taken a few classes, one in Computer Science and another in Media, which gave me some experience in coding. This limited experience was very interesting and I am excited to build on this, building on my overall media skills.</p>
     <h4>Do you have a media production superpower (Photoshop, Photography, Animation, Illustration, etc.)?
     </h4>
-    <p> Cras condimentum efficitur lacus, quis eleifend enim malesuada eget. Sed vulputate velit in ultrices mattis.
-        Pellentesque dignissim lacus ex, eu ornare ante volutpat eu. Morbi iaculis quam sed hendrerit bibendum. Donec
-        mollis cursus molestie. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-        himenaeos. Nunc vitae elit metus. Praesent posuere malesuada velit at. </p>
+    <p> I believe that video editing is my main focus and strength in media production. Using Adobe Premiere, I enjoy editing short films and videos of skateboarding.  </p>
 
 
 </body>
